@@ -1,3 +1,8 @@
+2006-01-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* quotearg.c (quotearg_buffer_restyled): Add "default: break;"
+	to pacify gcc -Wswitch-default.
+
 2006-01-17  Jim Meyering  <jim@meyering.net>
 
 	Rewrite fts.c not to change the current working directory,
